added all forms

--- a/html/activities/index.html
+++ b/html/activities/index.html
@@ -49,7 +49,7 @@
   <main class="content content-grid">
     <header class="section-header">
       <h2 class="section-heading">Activities</h2>
-      <button class="btn btn-schedule" type="button" name="button">
+      <button class="btn btn-schedule" type="button" name="button" onclick="changePage('activity-form.html')">
         <i class="fa-solid fa-plus icon"></i>
         Schedule Activity
       </button>
@@ -91,66 +91,66 @@
 
         <tbody class="table-body" id="tableData">
           <!-- Sample Data -->
-          <tr onclick="togglePopup('activityDetails')" id="activity1">
+          <tr onclick="getData('activity', 123123)" id="activity1">
             <th scope="row"><input type="checkbox" name="activityName#" value="" onclick="checkedRow('activity1', event)"></th>
-            <td>Marriage</td>
+            <td>Activity Name</td>
             <td class="today">Today</td>
             <td>MMMM dd, YYYY</td>
             <td>01:00 AM</td>
           </tr>
 
-          <tr onclick="togglePopup('activityDetails')" id="activity2">
+          <tr onclick="getData('activity', 123123)" id="activity2">
             <th scope="row"><input type="checkbox" name="activityName#" value="" onclick="checkedRow('activity2', event)"></th>
-            <td>Baptismal</td>
+            <td>Activity Name</td>
             <td class="today">Today</td>
             <td>MMMM dd, YYYY</td>
             <td>01:00 AM</td>
           </tr>
 
-          <tr onclick="togglePopup('activityDetails')" id="activity3">
+          <tr onclick="getData('activity', 123123)" id="activity3">
             <th scope="row"><input type="checkbox" name="activityName#" value="" onclick="checkedRow('activity3', event)"></th>
-            <td>Anniversary</td>
+            <td>Activity Name</td>
             <td class="today">Today</td>
             <td>MMMM dd, YYYY</td>
             <td>01:00 AM</td>
           </tr>
 
-          <tr onclick="togglePopup('activityDetails')" id="activity4">
+          <tr onclick="getData('activity', 123123)" id="activity4">
             <th scope="row"><input type="checkbox" name="activityName#" value="" onclick="checkedRow('activity4', event)"></th>
-            <td>Marriage</td>
+            <td>Activity Name</td>
             <td>Upcoming</td>
             <td>MMMM dd, YYYY</td>
             <td>01:00 AM</td>
           </tr>
 
 
-          <tr onclick="togglePopup('activityDetails')" id="activity5">
+          <tr onclick="getData('activity', 123123)" id="activity5">
             <th scope="row"><input type="checkbox" name="activityName#" value="" onclick="checkedRow('activity5', event)"></th>
-            <td>Marriage</td>
+            <td>Activity Name</td>
             <td>Upcoming</td>
             <td>MMMM dd, YYYY</td>
             <td>01:00 AM</td>
           </tr>
 
-          <tr onclick="togglePopup('activityDetails')" id="activity6">
+          <tr onclick="getData('activity', 123123)" id="activity6">
             <th scope="row"><input type="checkbox" name="activityName#" value="" onclick="checkedRow('activity6', event);"></th>
-            <td>Baptismal</td>
+            <td>Activity Name</td>
             <td>Upcoming</td>
             <td>MMMM dd, YYYY</td>
             <td>02:00 AM</td>
           </tr>
 
-          <tr onclick="togglePopup('activityDetails')" id="activity7">
+          <tr onclick="getData('activity', 123123)" id="activity7">
             <th scope="row"><input type="checkbox" name="activityName#" value="" onclick="checkedRow('activity7', event)"></th>
-            <td>Anniversary</td>
+            <td>Activity Name</td>
             <td>Done</td>
             <td>MMMM dd, YYYY</td>
             <td>01:00 AM</td>
           </tr>
 
-          <tr onclick="togglePopup('activityDetails')" id="activity8">
+          <tr onclick="getData('activity', 123123)" id="activity8">
             <th scope="row"><input type="checkbox" name="activityName#" value="" onclick="checkedRow('activity8', event)"></th>
-            <td>Marriage</td>
+            <td>Activity Name</td>
             <td>Done</td>
             <td>MMMM dd, YYYY</td>
             <td>01:00 AM</td>
