--- a/html/events/forms/marriage.html
+++ b/html/events/forms/marriage.html
@@ -53,7 +53,7 @@
         <hr>
       </header>
 
-      <form class="form-container" action="" method="post" id="marriageForm">
+      <form class="form-container" action="" method="post" id="marriageScheduleForm">
 
         <h3 class="heading2">Groom</h3>
 
@@ -217,7 +217,9 @@
 
     <div class="side-to-side">
       <button class="btn btn-outline btn-secondary" onclick="changePage('../index.html')">Back</button>
-      <button class="btn" type="submit" onclick="" form="marriageForm">Submit</button>
+      <!-- Use the button with form attribute for backend -->
+      <!-- <button class="btn" type="submit" onclick="" form="marriageScheduleForm">Submit</button> -->
+      <button class="btn" onclick="changePage('../index.html')">Submit</button>
     </div>
 
 
