--- a/html/activities/activity-details.html
+++ b/html/activities/activity-details.html
@@ -91,7 +91,7 @@
       <div class="side-to-side">
         <button class="btn btn-outline btn-secondary" onclick="changePage('index.html')">Back</button>
         <!-- <button class="btn" type="submit" onclick="" form="otherDetails">Save</button> -->
-        <button class="btn" onclick="changePage('activity-details.html')">Submit</button>
+        <button class="btn" onclick="changePage('activity-details.html')">Save</button>
       </div>
     </div>
 
