--- a/user.html
+++ b/user.html
@@ -41,7 +41,7 @@
 
       <address class="bottom-navbar-container">
         <div class="address">
-          <p>For inquiries chuchu:</p>
+          <p>For inquiries contact:</p>
           <strong class="contact">0909090909</strong>
           <strong class="contact">email@gmail.com</strong>
         </div>
@@ -50,27 +50,40 @@
   </section>
 
   <main class="content content-fill">
-    <!-- Insert Codes Here -->
 
     <header class="home-header">
-      <div class="header-slides-images">
-        <div class="header-slides">
-          <img class="header-image" src="https://media-public.canva.com/MADQ4xTu4OA/1/screen.jpg">
-          <!-- <h1>Heading</h1> -->
+      <div class="sliding-image-container">
+
+        <div class="header-slides-images">
+          <div class="image-overlay"></div>
+
+          <div class="header-slides">
+            <img class="header-image" src="https://media-public.canva.com/MADQ4xTu4OA/1/screen.jpg">
+          </div>
+
+          <div class="header-slides">
+            <img class="header-image"
+              src="https://media-private.canva.com/MSrkQ/MAFDpgMSrkQ/1/s.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAJWF6QO3UH4PAAJ6Q%2F20220614%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20220614T180755Z&X-Amz-Expires=63806&X-Amz-Signature=71549c4d957c1afb47098a07f9b99dd39f0605ece2732d5ee955d8b191e03601&X-Amz-SignedHeaders=host&response-expires=Wed%2C%2015%20Jun%202022%2011%3A51%3A21%20GMT">
+          </div>
+
+          <div class="header-slides">
+            <img class="header-image"
+              src="https://media-private.canva.com/1KslI/MAFDpr1KslI/1/s.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAJWF6QO3UH4PAAJ6Q%2F20220615%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20220615T064116Z&X-Amz-Expires=16328&X-Amz-Signature=0381c056b3824250fd661d1926bcf1d53ea14e5c4980b49b29358d61948bf208&X-Amz-SignedHeaders=host&response-expires=Wed%2C%2015%20Jun%202022%2011%3A13%3A24%20GMT">
+          </div>
+
+          <a class="prev" onclick="plusSlides(-1)">❮</a>
+          <a class="next" onclick="plusSlides(1)">❯</a>
         </div>
 
-        <div class="header-slides">
-          <img class="header-image"
-            src="https://media-private.canva.com/MSrkQ/MAFDpgMSrkQ/1/s.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAJWF6QO3UH4PAAJ6Q%2F20220614%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20220614T180755Z&X-Amz-Expires=63806&X-Amz-Signature=71549c4d957c1afb47098a07f9b99dd39f0605ece2732d5ee955d8b191e03601&X-Amz-SignedHeaders=host&response-expires=Wed%2C%2015%20Jun%202022%2011%3A51%3A21%20GMT">
-        </div>
+        <div class="home-heading ">
 
-        <div class="header-slides">
-          <img class="header-image"
-            src="https://media-private.canva.com/1KslI/MAFDpr1KslI/1/s.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAJWF6QO3UH4PAAJ6Q%2F20220615%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20220615T064116Z&X-Amz-Expires=16328&X-Amz-Signature=0381c056b3824250fd661d1926bcf1d53ea14e5c4980b49b29358d61948bf208&X-Amz-SignedHeaders=host&response-expires=Wed%2C%2015%20Jun%202022%2011%3A13%3A24%20GMT">
-        </div>
+          <h1 class="big-heading">Best place to stay connected with God connectedly.</h1>
 
-        <a class="prev" onclick="plusSlides(-1)">❮</a>
-        <a class="next" onclick="plusSlides(1)">❯</a>
+          <div class="row cta">
+            <button class="btn btn-submit" type="button" name="button">Schedule an Event</button>
+            <button class="btn btn-outline-light" type="button" name="button">View activities</button>
+          </div>
+        </div>
       </div>
 
       <div>
@@ -79,12 +92,206 @@
         <span class="dot" onclick="currentSlide(3)"></span>
       </div>
 
-      <div class="header-description">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nulla malesuada pellentesque elit eget gravida cum. Ultrices eros in cursus turpis massa tincidunt dui. Eleifend mi in nulla posuere sollicitudin aliquam ultrices. Leo duis ut diam quam nulla porttitor massa id.</p>
-      </div>
     </header>
 
-    <!-- ************************ -->
+    <div class="wrapper">
+
+      <p class="section-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nulla malesuada pellentesque elit eget gravida cum. Ultrices eros in cursus turpis massa
+        tincidunt dui. Eleifend mi
+        in nulla posuere sollicitudin aliquam ultrices. Leo duis ut diam quam nulla porttitor massa id.</p>
+
+      <hr>
+
+      <section>
+        <div class="side-to-side">
+          <h2 class="heading2">Events</h2>
+          <a class="clickable-text underlined-text" href="#">View Scheduled Event</a>
+        </div>
+
+        <p class="section-description">lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nulla malesuada pellentesque elit eget gravida cum. Ultrices eros in cursus turpis
+          massa tincidunt dui.</p>
+
+        <div class="container">
+          <div class="carousel">
+            <input type="radio" name="slides" checked="checked" id="slide-1">
+            <input type="radio" name="slides" id="slide-2">
+            <input type="radio" name="slides" id="slide-3">
+            <input type="radio" name="slides" id="slide-4">
+            <input type="radio" name="slides" id="slide-5">
+            <input type="radio" name="slides" id="slide-6">
+            <ul class="carousel__slides">
+              <li class="carousel__slide">
+                <figure>
+                  <div>
+                    <img src="images/1.png" alt="" width="500" height="600">
+                  </div>
+                  <figcaption>
+                    Wedding
+                    <span class="credit">Lorem ipsum dolor sit amet consectetur adipisicing elit.</span>
+                  </figcaption>
+                </figure>
+              </li>
+              <li class="carousel__slide">
+                <figure>
+                  <div>
+                    <img src="images/2.png" alt="" width="500" height="600">
+                  </div>
+                  <figcaption>
+                    Baptism
+                    <span class="credit">Lorem ipsum dolor sit amet consectetur adipisicing elit.</span>
+                  </figcaption>
+                </figure>
+              </li>
+              <li class="carousel__slide">
+                <figure>
+                  <div>
+                    <img src="images/3.png" alt="" width="500" height="600">
+                  </div>
+                  <figcaption>
+                    Youth Activities
+                    <span class="credit">Lorem ipsum dolor sit amet consectetur adipisicing elit.</span>
+                  </figcaption>
+                </figure>
+              </li>
+              <li class="carousel__slide">
+                <figure>
+                  <div>
+                    <img src="images/6.png" alt="" width="500" height="600">
+                  </div>
+                  <figcaption>
+                    Anniversaries.
+                    <span class="credit">Lorem ipsum dolor sit amet consectetur adipisicing elit.</span>
+                  </figcaption>
+                </figure>
+              </li>
+              <li class="carousel__slide">
+                <figure>
+                  <div>
+                    <img src="images/5.png" alt="" width="500" height="600">
+                  </div>
+                  <figcaption>
+                    Prayer Meeting
+                    <span class="credit">Lorem ipsum dolor sit amet consectetur adipisicing elit.</span>
+                  </figcaption>
+                </figure>
+              </li>
+              <li class="carousel__slide">
+                <figure>
+                  <div>
+                    <img src="images/4.png" alt="" width="500" height="600">
+                  </div>
+                  <figcaption>
+                    Practice
+                    <span class="credit">Lorem ipsum dolor sit amet consectetur adipisicing elit.</span>
+                  </figcaption>
+                </figure>
+              </li>
+            </ul>
+            <ul class="carousel__thumbnails">
+              <li>
+                <label for="slide-1"><img src="images/1.png" alt="" width="500" height="600"></label>
+              </li>
+              <li>
+                <label for="slide-2"><img src="images/2.png" alt="" width="500" height="600"></label>
+              </li>
+              <li>
+                <label for="slide-3"><img src="images/3.png" alt="" width="500" height="600"></label>
+              </li>
+              <li>
+                <label for="slide-4"><img src="images/6.png" alt="" width="500" height="600"></label>
+              </li>
+              <li>
+                <label for="slide-5"><img src="images/5.png" alt="" width="500" height="600"></label>
+              </li>
+              <li>
+                <label for="slide-6"><img src="images/4.png" alt="" width="500" height="600"></label>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
+
+      <hr>
+
+      <section>
+        <div class="side-to-side">
+          <h2 class="heading2">Activities</h2>
+          <a class="clickable-text underlined-text" href="#">View Scheduled Activities</a>
+        </div class="activity-name-container">
+        <p class="section-description">lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nulla malesuada pellentesque elit eget gravida cum</p>
+
+        <div class="row">
+
+          <div class="activity-grid-box">
+            <img class="grid-image" src="https://media-public.canva.com/MADQtiIxiSw/2/screen.jpg">
+            <div class="activity-name-container">
+              <h3 class="heading3">Rosary</h3>
+            </div>
+          </div>
+
+          <div class="activity-grid-box">
+            <img class="grid-image"
+              src="https://media-private.canva.com/ITodM/MAFDeJITodM/1/s.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAJWF6QO3UH4PAAJ6Q%2F20220616%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20220616T212154Z&X-Amz-Expires=69011&X-Amz-Signature=ef37d1c3d7b4d78ff30002cc28855cb07630d3b2969c56117ee177e708038d17&X-Amz-SignedHeaders=host&response-expires=Fri%2C%2017%20Jun%202022%2016%3A32%3A05%20GMT">
+            <div class="activity-name-container">
+              <h3 class="heading3">First Communion</h3>
+            </div>
+          </div>
+
+          <div class="activity-grid-box">
+            <img class="grid-image" src="https://media-public.canva.com/3iHDU/MAEP043iHDU/1/t.jpg">
+            <div class="activity-name-container">
+              <h3 class="heading3">Novena</h3>
+            </div>
+          </div>
+
+        </div>
+
+        <br>
+
+        <div class="row">
+
+          <div class="activity-grid-box">
+            <img class="grid-image" src="https://media-public.canva.com/zX1uM/MAEt5czX1uM/1/t.jpg">
+            <div class="activity-name-container">
+              <h3 class="heading3">Prayer Request</h3>
+            </div>
+          </div>
+
+          <div class="activity-grid-box">
+            <img class="grid-image" src=" https://media-public.canva.com/0wYy0/MAEUsg0wYy0/1/t.jpg">
+            <div class="activity-name-container">
+              <h3 class="heading3">Charity Donation</h3>
+            </div>
+          </div>
+
+          <div class="activity-grid-box">
+            <img class="grid-image"
+              src="https://media-private.canva.com/t5lDo/MAFDePt5lDo/1/s.png?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=AKIAJWF6QO3UH4PAAJ6Q%2F20220616%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20220616T185808Z&X-Amz-Expires=78559&X-Amz-Signature=d5ab2eec14167157d7973e939b53f7326baa983c198e85e587103711744611ba&X-Amz-SignedHeaders=host&response-expires=Fri%2C%2017%20Jun%202022%2016%3A47%3A27%20GMT">
+            <div class="activity-name-container">
+              <h3 class="heading3">Vacation Bible School</h3>
+            </div>
+          </div>
+
+        </div>
+
+      </section>
+
+      <span>
+        <hr>
+        <hr>
+      </span>
+
+      <!-- <section class="cta"> -->
+        <!-- <h2 class="big-heading">A place where everyone joins together.</h2> -->
+        <!-- <h2 class="big-heading">The house that is open for everyone anytime.</h2>
+        <div class="row">
+          <button class="btn btn-submit" type="button" name="button">Schedule an Event</button>
+          <button class="btn btn-outline" type="button" name="button">View activities</button>
+        </div>
+      </section> -->
+
+    </div>
+
   </main>
 
 
